--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
           <h2 class="visually-hidden"></h2>
           <ul class="second-section-list">
             <li class="second-section-element">
+              <div class="icon-box">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna1"></use>
+                </svg>
+              </div>
               <h3 class="second-section-subtitle">Strategy</h3>
               <p class="second-section-paragraphs">
                 Our goal is to identify the business problem to walk away with
@@ -83,6 +88,11 @@
               </p>
             </li>
             <li class="second-section-element">
+              <div class="icon-box">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock1"></use>
+                </svg>
+              </div>
               <h3 class="second-section-subtitle">Punctuality</h3>
               <p class="second-section-paragraphs">
                 Bring the key message to the brand's audience for the best price
@@ -90,6 +100,11 @@
               </p>
             </li>
             <li class="second-section-element">
+              <div class="icon-box">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram1"></use>
+                </svg>
+              </div>
               <h3 class="second-section-subtitle">Diligence</h3>
               <p class="second-section-paragraphs">
                 Research and confirm brands with the strongest digital growth
@@ -97,6 +112,11 @@
               </p>
             </li>
             <li class="second-section-element">
+              <div class="icon-box">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut1"></use>
+                </svg>
+              </div>
               <h3 class="second-section-subtitle">Technologies</h3>
               <p class="second-section-paragraphs">
                 Design practice focused on digital experiences. We bring forth a
