--- a/index.html
+++ b/index.html
@@ -135,49 +135,169 @@
             <li class="third-section-list-item">
               <img
                 src="./images/team/img-1.jpg"
-                alt="Product Designer"
+                alt="Mark Guerrero"
                 width="264"
                 height="260"
               />
               <div class="container-name-title">
                 <h3 class="third-section-subtitle">Mark Guerrero</h3>
                 <p class="third-section-paragraph">Product Designer</p>
+                <ul class="social-list">
+                  <li class="social-item">
+                    <a href="#" class="social-link" aria-label="Instagram">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/socials.svg#icon-instagram1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="#" class="social-link" aria-label="Twitter">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/socials.svg#icon-twitter1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="#" class="social-link" aria-label="Facebook">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/socials.svg#icon-facebook1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="#" class="social-link" aria-label="LinkedIn">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/socials.svg#icon-linkedin1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="third-section-list-item">
               <img
                 src="./images/team/img-2.jpg"
-                alt="Frontend Developer"
+                alt="Tom Ford"
                 width="264"
                 height="260"
               />
               <div class="container-name-title">
                 <h3 class="third-section-subtitle">Tom Ford</h3>
                 <p class="third-section-paragraph">Frontend Developer</p>
+                <ul class="social-list">
+                  <li class="social-item">
+                    <a href="#" class="social-link" aria-label="Instagram">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/socials.svg#icon-instagram1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="#" class="social-link" aria-label="Twitter">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/socials.svg#icon-twitter1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="#" class="social-link" aria-label="Facebook">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/socials.svg#icon-facebook1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="#" class="social-link" aria-label="LinkedIn">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/socials.svg#icon-linkedin1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="third-section-list-item">
               <img
                 src="./images/team/img-3.jpg"
-                alt="Marketing"
+                alt="Camila Garcia"
                 width="264"
                 height="260"
               />
               <div class="container-name-title">
                 <h3 class="third-section-subtitle">Camila Garcia</h3>
                 <p class="third-section-paragraph">Marketing</p>
+                <ul class="social-list">
+                  <li class="social-item">
+                    <a href="#" class="social-link" aria-label="Instagram">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/socials.svg#icon-instagram1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="#" class="social-link" aria-label="Twitter">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/socials.svg#icon-twitter1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="#" class="social-link" aria-label="Facebook">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/socials.svg#icon-facebook1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="#" class="social-link" aria-label="LinkedIn">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/socials.svg#icon-linkedin1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="third-section-list-item">
               <img
                 src="./images/team/img-4.jpg"
-                alt="UI Designer"
+                alt="Daniel Wilson"
                 width="264"
                 height="260"
               />
               <div class="container-name-title">
                 <h3 class="third-section-subtitle">Daniel Wilson</h3>
                 <p class="third-section-paragraph">UI Designer</p>
+                <ul class="social-list">
+                  <li class="social-item">
+                    <a href="#" class="social-link" aria-label="Instagram">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/socials.svg#icon-instagram1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="#" class="social-link" aria-label="Twitter">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/socials.svg#icon-twitter1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="#" class="social-link" aria-label="Facebook">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/socials.svg#icon-facebook1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="#" class="social-link" aria-label="LinkedIn">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/socials.svg#icon-linkedin1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
