--- a/index.html
+++ b/index.html
@@ -310,72 +310,119 @@
           <h2 class="third-section-header">Our Portfolio</h2>
           <ul class="fourth-section-list">
             <li class="fourth-section-list-item">
-              <img
-                src="./images/portfolio/img-1.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div class="img-wrap">
+                <img
+                  src="./images/portfolio/img-1.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="container-fourth-section-name">
                 <h3 class="fourth-section-header">Banking App</h3>
                 <p class="fourth-section-paragraph">App</p>
               </div>
             </li>
+
             <li class="fourth-section-list-item">
-              <img
-                src="./images/portfolio/img-2.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="img-wrap">
+                <img
+                  src="./images/portfolio/img-2.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="container-fourth-section-name">
                 <h3 class="fourth-section-header">Cashless Payment</h3>
                 <p class="fourth-section-paragraph">Marketing</p>
               </div>
             </li>
+
             <li class="fourth-section-list-item">
-              <img
-                src="./images/portfolio/img-3.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+              <div class="img-wrap">
+                <img
+                  src="./images/portfolio/img-3.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="container-fourth-section-name">
                 <h3 class="fourth-section-header">Meditation App</h3>
                 <p class="fourth-section-paragraph">App</p>
               </div>
             </li>
+
             <li class="fourth-section-list-item">
-              <img
-                src="./images/portfolio/img-4.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="img-wrap">
+                <img
+                  src="./images/portfolio/img-4.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="container-fourth-section-name">
                 <h3 class="fourth-section-header">Taxi Service</h3>
                 <p class="fourth-section-paragraph">Marketing</p>
               </div>
             </li>
+
             <li class="fourth-section-list-item">
-              <img
-                src="./images/portfolio/img-5.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="img-wrap">
+                <img
+                  src="./images/portfolio/img-5.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="container-fourth-section-name">
                 <h3 class="fourth-section-header">Screen Illustrations</h3>
                 <p class="fourth-section-paragraph">Design</p>
               </div>
             </li>
+
             <li class="fourth-section-list-item">
-              <img
-                src="./images/portfolio/img-6.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="img-wrap">
+                <img
+                  src="./images/portfolio/img-6.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="container-fourth-section-name">
                 <h3 class="fourth-section-header">Online Courses</h3>
                 <p class="fourth-section-paragraph">Marketing</p>
