--- a/index.html
+++ b/index.html
@@ -436,13 +436,49 @@
     <!--#region Footer-->
     <footer class="footer">
       <div class="container container-footer">
-        <a class="logo footer-logo" href="./index.html">
-          Web<span class="footer-logo-part">Studio</span></a
-        >
-        <p class="footer-paragraph">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-logo-wrapper" style="margin-right: 120px">
+          <a class="logo footer-logo" href="./index.html">
+            Web<span class="footer-logo-part">Studio</span>
+          </a>
+          <p class="footer-paragraph">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+
+        <div class="footer-socials">
+          <p class="social-media-text">Social media</p>
+          <ul class="social-media-list">
+            <li class="social-media-item">
+              <a class="social-media-link" href="">
+                <svg class="social-media-icon" width="24" height="24">
+                  <use href="./images/socials.svg#icon-instagram1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-item">
+              <a class="social-media-link" href="">
+                <svg class="social-media-icon" width="24" height="24">
+                  <use href="./images/socials.svg#icon-twitter1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-item">
+              <a class="social-media-link" href="">
+                <svg class="social-media-icon" width="24" height="24">
+                  <use href="./images/socials.svg#icon-facebook1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-item">
+              <a class="social-media-link" href="">
+                <svg class="social-media-icon" width="24" height="24">
+                  <use href="./images/socials.svg#icon-linkedin1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
     <!-- #endregion -->
